.antlr/GrammarParser.java
// Generated from /home/josegar/Escritorio/p1compi/Grammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNC=1, MAIN=2, VAR=3, FMT=4, PRINTLN=5, CONST=6, IF=7, ELSE=8, SWITCH=9, 
		CASE=10, DEFAULT=11, FOR=12, BREAK=13, CONTINUE=14, RETURN=15, LEN=16, 
		NOW=17, SUBSTR=18, TYPEOF=19, INT_T=20, FLOAT_T=21, BOOL_T=22, RUNE_T=23, 
		STRING_T=24, LBRACE=25, RBRACE=26, LPAREN=27, RPAREN=28, LCOR=29, RCOR=30, 
		COMMA=31, ASSIGN=32, COLON=33, SEMICOLON=34, PLUS=35, MINUS=36, MULT=37, 
		DIV=38, MOD=39, DOT=40, REF=41, ANDO=42, ORO=43, LE=44, GE=45, EQUAL=46, 
		NEQUAL=47, LESS=48, GREATER=49, BOOL=50, NIL=51, ENTERO=52, FLOAT=53, 
		STR=54, RUNE=55, IDENTIFICADOR=56, COMENTARIO_LINEA=57, COMENTARIO_BLOQUE=58, 
		WS=59, ERROR=60;
	public static final int
		RULE_p = 0, RULE_bMain = 1, RULE_i = 2, RULE_funcLen = 3, RULE_funcNow = 4, 
		RULE_funcSub = 5, RULE_funcType = 6, RULE_retornar = 7, RULE_funcion = 8, 
		RULE_listaRetorno = 9, RULE_listaParametros = 10, RULE_bloqueFuncion = 11, 
		RULE_declaracionArreglosD = 12, RULE_listaValores = 13, RULE_asignacionArreglosD = 14, 
		RULE_accesoArreglosD = 15, RULE_declaracionArreglos = 16, RULE_asignacionArreglos = 17, 
		RULE_accesoArreglos = 18, RULE_sentenciaFor = 19, RULE_forClasico = 20, 
		RULE_condFor = 21, RULE_expFor = 22, RULE_sentenciaSwitch = 23, RULE_bloqueSwitch = 24, 
		RULE_bloqueCase = 25, RULE_bloqueDefault = 26, RULE_sentenciaIf = 27, 
		RULE_bloque = 28, RULE_asignacion = 29, RULE_imprimir = 30, RULE_declaracion = 31, 
		RULE_declaracionCorta = 32, RULE_declaracionConst = 33, RULE_listaExpr = 34, 
		RULE_listaId = 35, RULE_logExpr = 36, RULE_relExpr = 37, RULE_expr = 38, 
		RULE_term = 39, RULE_factor = 40, RULE_tipos = 41, RULE_simboloAsignacion = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"p", "bMain", "i", "funcLen", "funcNow", "funcSub", "funcType", "retornar", 
			"funcion", "listaRetorno", "listaParametros", "bloqueFuncion", "declaracionArreglosD", 
			"listaValores", "asignacionArreglosD", "accesoArreglosD", "declaracionArreglos", 
			"asignacionArreglos", "accesoArreglos", "sentenciaFor", "forClasico", 
			"condFor", "expFor", "sentenciaSwitch", "bloqueSwitch", "bloqueCase", 
			"bloqueDefault", "sentenciaIf", "bloque", "asignacion", "imprimir", "declaracion", 
			"declaracionCorta", "declaracionConst", "listaExpr", "listaId", "logExpr", 
			"relExpr", "expr", "term", "factor", "tipos", "simboloAsignacion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'func'", "'main'", "'var'", "'fmt'", "'Println'", "'const'", "'if'", 
			"'else'", "'switch'", "'case'", "'default'", "'for'", "'break'", "'continue'", 
			"'return'", "'len'", "'now'", "'substr'", "'typeOf'", "'int'", "'float'", 
			"'bool'", "'rune'", "'string'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"','", "'='", "':'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", 
			"'&'", "'&&'", "'||'", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", 
			null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNC", "MAIN", "VAR", "FMT", "PRINTLN", "CONST", "IF", "ELSE", 
			"SWITCH", "CASE", "DEFAULT", "FOR", "BREAK", "CONTINUE", "RETURN", "LEN", 
			"NOW", "SUBSTR", "TYPEOF", "INT_T", "FLOAT_T", "BOOL_T", "RUNE_T", "STRING_T", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LCOR", "RCOR", "COMMA", "ASSIGN", 
			"COLON", "SEMICOLON", "PLUS", "MINUS", "MULT", "DIV", "MOD", "DOT", "REF", 
			"ANDO", "ORO", "LE", "GE", "EQUAL", "NEQUAL", "LESS", "GREATER", "BOOL", 
			"NIL", "ENTERO", "FLOAT", "STR", "RUNE", "IDENTIFICADOR", "COMENTARIO_LINEA", 
			"COMENTARIO_BLOQUE", "WS", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PContext extends ParserRuleContext {
		public PContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p; }
	 
		public PContext() { }
		public void copyFrom(PContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends PContext {
		public BMainContext bMain() {
			return getRuleContext(BMainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public ProgramaContext(PContext ctx) { copyFrom(ctx); }
	}

	public final PContext p() throws RecognitionException {
		PContext _localctx = new PContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_p);
		try {
			_localctx = new ProgramaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			bMain();
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BMainContext extends ParserRuleContext {
		public BMainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bMain; }
	 
		public BMainContext() { }
		public void copyFrom(BMainContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BloqueMainContext extends BMainContext {
		public TerminalNode FUNC() { return getToken(GrammarParser.FUNC, 0); }
		public TerminalNode MAIN() { return getToken(GrammarParser.MAIN, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public BloqueMainContext(BMainContext ctx) { copyFrom(ctx); }
	}

	public final BMainContext bMain() throws RecognitionException {
		BMainContext _localctx = new BMainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bMain);
		try {
			_localctx = new BloqueMainContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(FUNC);
			setState(90);
			match(MAIN);
			setState(91);
			match(LPAREN);
			setState(92);
			match(RPAREN);
			setState(93);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IContext extends ParserRuleContext {
		public IContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_i; }
	 
		public IContext() { }
		public void copyFrom(IContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArreglosAsignationDContext extends IContext {
		public AsignacionArreglosDContext asignacionArreglosD() {
			return getRuleContext(AsignacionArreglosDContext.class,0);
		}
		public ArreglosAsignationDContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IncDecContext extends IContext {
		public ExpForContext expFor() {
			return getRuleContext(ExpForContext.class,0);
		}
		public IncDecContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncionImprimirContext extends IContext {
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public FuncionImprimirContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForSentenciaContext extends IContext {
		public SentenciaForContext sentenciaFor() {
			return getRuleContext(SentenciaForContext.class,0);
		}
		public ForSentenciaContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArreglosDeclarationDContext extends IContext {
		public DeclaracionArreglosDContext declaracionArreglosD() {
			return getRuleContext(DeclaracionArreglosDContext.class,0);
		}
		public ArreglosDeclarationDContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DFunctionContext extends IContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public DFunctionContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArreglosDeclarationContext extends IContext {
		public DeclaracionArreglosContext declaracionArreglos() {
			return getRuleContext(DeclaracionArreglosContext.class,0);
		}
		public ArreglosDeclarationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SwitchSentenciaContext extends IContext {
		public SentenciaSwitchContext sentenciaSwitch() {
			return getRuleContext(SentenciaSwitchContext.class,0);
		}
		public SwitchSentenciaContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ShortDeclarationContext extends IContext {
		public DeclaracionCortaContext declaracionCorta() {
			return getRuleContext(DeclaracionCortaContext.class,0);
		}
		public ShortDeclarationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConstDeclarationContext extends IContext {
		public DeclaracionConstContext declaracionConst() {
			return getRuleContext(DeclaracionConstContext.class,0);
		}
		public ConstDeclarationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaReturnContext extends IContext {
		public RetornarContext retornar() {
			return getRuleContext(RetornarContext.class,0);
		}
		public SentenciaReturnContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AsignationContext extends IContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public AsignationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaBreakContext extends IContext {
		public TerminalNode BREAK() { return getToken(GrammarParser.BREAK, 0); }
		public SentenciaBreakContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContinueContext extends IContext {
		public TerminalNode CONTINUE() { return getToken(GrammarParser.CONTINUE, 0); }
		public SentenciaContinueContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArreglosAsignationContext extends IContext {
		public AsignacionArreglosContext asignacionArreglos() {
			return getRuleContext(AsignacionArreglosContext.class,0);
		}
		public ArreglosAsignationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends IContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public DeclarationContext(IContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfSentenciaContext extends IContext {
		public SentenciaIfContext sentenciaIf() {
			return getRuleContext(SentenciaIfContext.class,0);
		}
		public IfSentenciaContext(IContext ctx) { copyFrom(ctx); }
	}

	public final IContext i() throws RecognitionException {
		IContext _localctx = new IContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_i);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new FuncionImprimirContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				imprimir();
				}
				break;
			case 2:
				_localctx = new DeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				declaracion();
				}
				break;
			case 3:
				_localctx = new ShortDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				declaracionCorta();
				}
				break;
			case 4:
				_localctx = new ConstDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				declaracionConst();
				}
				break;
			case 5:
				_localctx = new AsignationContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(99);
				asignacion();
				}
				break;
			case 6:
				_localctx = new IfSentenciaContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(100);
				sentenciaIf();
				}
				break;
			case 7:
				_localctx = new SwitchSentenciaContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(101);
				sentenciaSwitch();
				}
				break;
			case 8:
				_localctx = new ForSentenciaContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(102);
				sentenciaFor();
				}
				break;
			case 9:
				_localctx = new IncDecContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(103);
				expFor();
				}
				break;
			case 10:
				_localctx = new ArreglosDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(104);
				declaracionArreglos();
				}
				break;
			case 11:
				_localctx = new ArreglosAsignationContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(105);
				asignacionArreglos();
				}
				break;
			case 12:
				_localctx = new ArreglosDeclarationDContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(106);
				declaracionArreglosD();
				}
				break;
			case 13:
				_localctx = new ArreglosAsignationDContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(107);
				asignacionArreglosD();
				}
				break;
			case 14:
				_localctx = new DFunctionContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(108);
				funcion();
				}
				break;
			case 15:
				_localctx = new SentenciaReturnContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(109);
				retornar();
				}
				break;
			case 16:
				_localctx = new SentenciaContinueContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(110);
				match(CONTINUE);
				}
				break;
			case 17:
				_localctx = new SentenciaBreakContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(111);
				match(BREAK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncLenContext extends ParserRuleContext {
		public TerminalNode LEN() { return getToken(GrammarParser.LEN, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public LogExprContext logExpr() {
			return getRuleContext(LogExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public FuncLenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcLen; }
	}

	public final FuncLenContext funcLen() throws RecognitionException {
		FuncLenContext _localctx = new FuncLenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcLen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(LEN);
			setState(115);
			match(LPAREN);
			setState(116);
			logExpr(0);
			setState(117);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncNowContext extends ParserRuleContext {
		public TerminalNode NOW() { return getToken(GrammarParser.NOW, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public FuncNowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcNow; }
	}

	public final FuncNowContext funcNow() throws RecognitionException {
		FuncNowContext _localctx = new FuncNowContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcNow);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(NOW);
			setState(120);
			match(LPAREN);
			setState(121);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncSubContext extends ParserRuleContext {
		public TerminalNode SUBSTR() { return getToken(GrammarParser.SUBSTR, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public List<LogExprContext> logExpr() {
			return getRuleContexts(LogExprContext.class);
		}
		public LogExprContext logExpr(int i) {
			return getRuleContext(LogExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public FuncSubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcSub; }
	}

	public final FuncSubContext funcSub() throws RecognitionException {
		FuncSubContext _localctx = new FuncSubContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcSub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(SUBSTR);
			setState(124);
			match(LPAREN);
			setState(125);
			logExpr(0);
			setState(126);
			match(COMMA);
			setState(127);
			logExpr(0);
			setState(128);
			match(COMMA);
			setState(129);
			logExpr(0);
			setState(130);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncTypeContext extends ParserRuleContext {
		public TerminalNode TYPEOF() { return getToken(GrammarParser.TYPEOF, 0); }
		public TerminalNode LPAREN() { return getToken(GrammarParser.LPAREN, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(GrammarParser.IDENTIFICADOR, 0); }
		public TerminalNode RPAREN() { return getToken(GrammarParser.RPAREN, 0); }
		public FuncTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcType; }
	}

	public final FuncTypeContext funcType() throws RecognitionException {
		FuncTypeContext _localctx = new FuncTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(TYPEOF);
			setState(133);
			match(LPAREN);
			setState(134);
			match(IDENTIFICADOR);
			setState(135);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RetornarContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(GrammarParser.RETURN, 0); }
		public ListaExprContext listaExpr() {
			return getRuleContext(ListaExprContext.class,0);
		}
		public RetornarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retornar; }
	}

	public final RetornarContext retornar() throws RecognitionException {
		RetornarContext _localctx = new RetornarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_retornar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(RETURN);
			setState(138);
			listaExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncionContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(GrammarParser.FUNC, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(GrammarParser.IDENTIFICADOR, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(GrammarParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(GrammarParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(GrammarParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(GrammarParser.RPAREN, i);
		}
		public ListaRetornoContext listaRetorno() {
			return getRuleContext(ListaRetornoContext.class,0);
		}
		public BloqueFuncionContext bloqueFuncion() {
			return getRuleContext(BloqueFuncionContext.class,0);
		}
		public ListaParametrosContext listaParametros() {
			return getRuleContext(ListaParametrosContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}
